bpo-28146: Fix a confusing error message in str.format()